# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: cli.py  settings.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
georg_remer_brain_games.egg-info/: PKG-INFO  SOURCES.txt
