[tool.poetry]
name = "georg-remer_brain_games"
version = "0.8.7"
description = "A set of games to keep your brain fit."
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Topic :: Games/Entertainment",
]
repository = "https://github.com/georg-remer/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-calc = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

